Artifacts enabled SDK + transport package (#39)
* Artifacts enabled SDK + transport package

* Add system param to artifacts methods

* Add support for BearerToken and custom Consumers/Producers
