# models/job_artifact.go
@@ -1,0 +1,56 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// JobArtifact job artifact
+//
+// swagger:model JobArtifact
+type JobArtifact struct {
+
+	// last modified
+	LastModified string `json:"lastModified,omitempty"`
+
+	// path
+	Path string `json:"path,omitempty"`
+
+	// size
+	Size int64 `json:"size,omitempty"`
+}
+
+// Validate validates this job artifact
+func (m *JobArtifact) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this job artifact based on context it is used
+func (m *JobArtifact) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *JobArtifact) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *JobArtifact) UnmarshalBinary(b []byte) error {
+	var res JobArtifact
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
