# models/route_group.go
@@ -22,6 +22,9 @@ type RouteGroup struct {
 	// created at
 	CreatedAt string `json:"createdAt,omitempty"`
 
+	// defaults
+	Defaults *DefaultsCompositeDefaults `json:"defaults,omitempty"`
+
 	// endpoints
 	Endpoints []*RouteGroupEndpoint `json:"endpoints,omitempty"`
 
@@ -45,6 +48,10 @@ type RouteGroup struct {
 func (m *RouteGroup) Validate(formats strfmt.Registry) error {
 	var res []error
 
+	if err := m.validateDefaults(formats); err != nil {
+		res = append(res, err)
+	}
+
 	if err := m.validateEndpoints(formats); err != nil {
 		res = append(res, err)
 	}
@@ -60,6 +67,25 @@ func (m *RouteGroup) Validate(formats strfmt.Registry) error {
 	if len(res) > 0 {
 		return errors.CompositeValidationError(res...)
 	}
+	return nil
+}
+
+func (m *RouteGroup) validateDefaults(formats strfmt.Registry) error {
+	if swag.IsZero(m.Defaults) { // not required
+		return nil
+	}
+
+	if m.Defaults != nil {
+		if err := m.Defaults.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("defaults")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("defaults")
+			}
+			return err
+		}
+	}
+
 	return nil
 }
 
@@ -131,6 +157,10 @@ func (m *RouteGroup) validateStatus(formats strfmt.Registry) error {
 func (m *RouteGroup) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
 	var res []error
 
+	if err := m.contextValidateDefaults(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
 	if err := m.contextValidateEndpoints(ctx, formats); err != nil {
 		res = append(res, err)
 	}
@@ -146,6 +176,27 @@ func (m *RouteGroup) ContextValidate(ctx context.Context, formats strfmt.Registr
 	if len(res) > 0 {
 		return errors.CompositeValidationError(res...)
 	}
+	return nil
+}
+
+func (m *RouteGroup) contextValidateDefaults(ctx context.Context, formats strfmt.Registry) error {
+
+	if m.Defaults != nil {
+
+		if swag.IsZero(m.Defaults) { // not required
+			return nil
+		}
+
+		if err := m.Defaults.ContextValidate(ctx, formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("defaults")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("defaults")
+			}
+			return err
+		}
+	}
+
 	return nil
 }
 
